# eteam-signal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  k8s-deployment.yaml  pyproject.toml  requirements.txt
documentation/: project_blueprint.md
migrations/: 001_insider_schema.sql
src/: cli.py  main.py
src/agents/: analyst.py  composite_signal.py  critic.py  insider_analyzer.py  workflow.py
src/api/: insider_routes.py  routes.py
src/core/: config.py  logger.py
src/models/: insider_schema.py  schema.py
src/services/: alert_service.py  filing_monitor.py  insider_client.py  insider_store.py  llm_client.py  processor.py  retriever.py  sec_client.py  universe.py  vector_store.py
src/utils/: reporter.py
tests/: TESTING_GUIDE.md  test_cli.py
tests/agents/: test_analyst.py  test_composite_signal.py  test_critic.py  test_insider_analyzer.py  test_workflow.py
tests/api/: test_insider_routes.py  test_routes.py
tests/core/: test_config.py
tests/models/: test_insider_schema.py  test_schema.py
tests/services/: test_alert_service.py  test_filing_monitor.py  test_insider_client.py  test_insider_store.py  test_llm_client.py  test_processor.py  test_retriever.py  test_sec_client.py  test_vector_store.py
