[project]
name = "sec-alpha-sentinel"
version = "0.1.0"
description = "A production-grade hybrid RAG & agentic pipeline for SEC financial alpha extraction."
authors = [{name = "James Hall", email = "jameshall@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "anthropic>=0.18.0",
    "qdrant-client>=1.7.0",
    "edgartools>=5.0.0",
    "sentence-transformers>=2.3.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "typer>=0.9.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "asyncpg>=0.29.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "testcontainers[postgres]>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
